--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>#HackuOBiblio Access Conf 2014</title>
+		<title>#HackuOBiblio Code4Lib Ottawa 2014</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -46,9 +46,10 @@
 					<h3>libraries &#8226; hacking &#8226; open data</h3>
 					<p>
 						<small>Catherine M<sup>c</sup>Goveran &#8226; Gov Info Librarian &#8226; uOttawa</a></small>
+						<small>Sarah Simpkin &#8226; GIS & Geography Librarian &#8226; uOttawa</a></small>
 					</p>
 					<p>
-					<small><a href="http://twitter.com/kittmcg">@kittmcg</a></small>
+					<small><a href="http://twitter.com/kittmcg">@kittmcg</a></small> | <small><a href="http://twitter.com/sarahsimpkin">@sarahsimpkin</a></small>
 					</p>
 				</section>
 
