--- a/index.html
+++ b/index.html
@@ -129,8 +129,19 @@
 					<p>target audience + goals</p>
 				</section>
 				<section>
+					<section>
 					<h2>Open Data Ottawa</h2>
 					<p><a href="http://opendataottawa.tumblr.com/">tumblr</a> | <a href="http://www.meetup.com/Open-Data-Ottawa/">meetup</a> | <a href="https://twitter.com/opendataottawa">twitter</a> | <a href="https://www.facebook.com/opendataottawa">facebook</a></p>
+					</section>
+					<section>
+					<h2>Open Data Book Club Projects</h2>
+					<ul>
+						<li><a href="http://www.ckanica.com/blog/posts/ottawa-see-the-10-most-common-things-your-neighbors-complain-about/">10 Most common things your neighbours complain about</a></li>
+						<li><a href="http://rpubs.com/prabinov/32498">Analysis in R</a></li>
+						<li><a href="http://co2-radar.mybluemix.net/OpenDataOttawa/data/311/crossfilter.html">D3.js + Crossfilter</a></li>
+						<li><a href="https://github.com/TrangPham/Ottawa311/blob/master/README.md">Pie chart app & Rails</a></li>
+					</ul>
+					</section>
 				</section>
 				<section data-background="images/hackfest-combo.jpg">
 				</section>
