--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<section>
 					<h2>Open Data Book Club Projects</h2>
 					<ul>
-						<li><a href="http://www.ckanica.com/blog/posts/ottawa-see-the-10-most-common-things-your-neighbors-complain-about/">10 Most common things your neighbours complain about</a></li>
+						<li><a href="http://www.ckanica.com/blog/posts/ottawa-see-the-10-most-common-things-your-neighbors-complain-about/">10 common things your neighbours complain about</a></li>
 						<li><a href="http://rpubs.com/prabinov/32498">Analysis in R</a></li>
 						<li><a href="http://co2-radar.mybluemix.net/OpenDataOttawa/data/311/crossfilter.html">D3.js + Crossfilter</a></li>
 						<li><a href="https://github.com/TrangPham/Ottawa311/blob/master/README.md">Pie chart app & Rails</a></li>
