--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<small>Sarah Simpkin &#8226; GIS & Geography Librarian &#8226; uOttawa</a></small>
 					</p>
 					<p>
-					<small><a href="http://twitter.com/kittmcg">@kittmcg</a></small> | <small><a href="http://twitter.com/sarahsimpkin">@sarahsimpkin</a></small>
+					<small><a href="http://twitter.com/kittmcg">@kittmcg</a></small> * <small><a href="http://twitter.com/sarahsimpkin">@sarahsimpkin</a></small>
 					</p>
 				</section>
 
