--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 					<small><a href="http://twitter.com/kittmcg">@kittmcg</a> &#8226; <a href="http://twitter.com/sarahsimpkin">@sarahsimpkin</a></small>
 					</p>
 				</section>
+				
+				<section>
+					<img src="http://upload.wikimedia.org/wikipedia/en/a/a4/Henriette_Avram.jpg" alt="Henriette Avram"><p>Happy birthday Henriette Avram!</p><p><small>Programmer, MARC developer</small></p>
+				</section>
 
 				<section data-background="images/hackfest1.jpg">
 				</section>
