--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 				</section>
 				
 				<section>
-					<img src="http://upload.wikimedia.org/wikipedia/en/a/a4/Henriette_Avram.jpg" alt="Henriette Avram"><p>Happy birthday Henriette Avram!</p><p><small>Programmer, MARC developer</small></p>
+					<img src="http://upload.wikimedia.org/wikipedia/en/a/a4/Henriette_Avram.jpg" alt="Henriette Avram"><p>Happy birthday Henriette Avram!</p>
+					<p>Programmer, MARC developer</p>
+					<p><small>(October 7, 1919 – April 22, 2006)</small></p>
 				</section>
 
 				<section data-background="images/hackfest1.jpg">
