--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 				</section>
 				
 				<section>
-					<img src="http://upload.wikimedia.org/wikipedia/en/a/a4/Henriette_Avram.jpg" alt="Henriette Avram"><p>Happy birthday Henriette Avram!</p>
+					<img src="http://upload.wikimedia.org/wikipedia/en/a/a4/Henriette_Avram.jpg" alt="Henriette Avram">
+					<h2>Happy birthday Henriette Avram!</h2>
 					<p>Programmer, MARC developer</p>
 					<p><small>(October 7, 1919 – April 22, 2006)</small></p>
 				</section>
